sketches/final/style.css
body, html {
    font-family: akkurat, univers, helvetica, arial, sans-serif;
    margin: 0;
}
#title-wrapper {
    position: fixed;
    background: white;
    z-index: 1;
    top: 0;
    left: 40px;
    right: 40px;
}
h1 {
    font-size: 40px;
    margin: 40px 4px 4px 0px;
    text-transform: uppercase;
    letter-spacing: 1px;
}
#nav-bar {
    background: black;
    padding: 8px;
    color: white;
}
#nav-bar div {
    cursor: pointer;
    margin-right: 50px;
    display: inline-block;
    text-decoration: underline;
}
#search-form {
    width: 450px;
    height: 300px;
    background-color: white;
    display: none;
    position: fixed;
    top: 116px;
    left: 40px;
    z-index: 2;
    box-shadow: 5px 5px 10px #808080;
}
#search {
    -webkit-appearance: none;
    -moz-appearance: none;
    background-color: transparent;
    border: 1px solid #808080;
    color: #808080;
    position: absolute;
    top: 260px;
    right: 20px;
    cursor: pointer;
    text-transform: uppercase;
}

.result-sort {
    float: left;
    margin-right: 10px;
    cursor: pointer;
}
.result-sort .sort-box {
    width: 15px;
    height: 15px;
    display: inline-block;
    margin-right: 5px;
    background-color: #808080;
}
.result-sort.selected {
    color: black;
}
.result-sort.selected .sort-box {
    background-color: #000;
}

#breadcrumb {
    position: absolute;
    top: 680px;
    left: 55px;
    height: 50px;
    width: 750px;
}
#breadcrumb .link {
    font-size: 12px;
}
#breadcrumb .tick {
    margin: 0 10px;
}
#breadcrumb .item {
    cursor: pointer;
}
#breadcrumb .item:hover {
    text-decoration: underline;
}

#searchTerm {
	font-size: 20px;
    width: 700px;
	/*text-transform:capitalize;*/
	text-align: left;
	font-weight: normal;
    position: absolute;
    top: 130px;
    left: 50px;
    cursor: pointer;
}
#search:hover {
    border-color: #000;
    color: #000;
}
.form-row {
    width: 90%;
    margin: 0 5%;
    height: 30px;
    clear: both;
    color: #aaa;
}
.form-row:first-child {
    margin-top: 20px;
}
.form-row .clear {
    height: 15px;
    width: 15px;
    background-color: #aaa;
    float: right;
    margin-right: 7px;
    cursor: pointer;
    display: none;
}
.form-row.filled .clear {
    display: inline-block;
}
.form-row.filled .clear:hover {
    background-color: #000;
}
/*.form-row.locked .box {
    background-color: #000;
}
.form-row.locked {
    color: #000;
}*/
.form-row label {
    float: left;
    margin-right: 10px;
}
.form-row input {
    border: none;
    border-bottom: 1px solid black;
    float: left;
    width: 200px;
}
.right-half {
    width: 73%;
    position: relative;
    float: right;
    height: 100%;
    margin-top: 160px;
}
.left-half{
    width: 24%;
    position: fixed;
    height: 100%;
    margin-top: 160px;
    margin-left: 40px;
}
#graph-wrapper {
    position: absolute;
    top: 0px;
    width: 100%;
}
#carrel {
    font-size: 12px;
    width: 100%;
    position: absolute;
    bottom: 115px;
    height: 200px;
}
#carrel-box {
    width: 100%;
    height: 100px;
    border: 1px solid #808080;
    margin-bottom: 7px;
    box-sizing: border-box;
}
#carrel-box ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
    overflow-x: scroll;
    height: 132px;
    white-space: nowrap;
}
#carrel-box li {
    width: 15px;
    height: 15px;
    display: inline-block;
    margin: 5px 0 0 5px;
    cursor: pointer;
}
#carrel-box span {
    -webkit-transform:rotate(-90deg);
    -moz-transform:rotate(-90deg);
    -o-transform: rotate(-90deg);
    white-space:nowrap;
    display: block;
}
.carrel-action {
    font-family: courier, monospace;
    cursor: pointer;
    margin-bottom: 3px;
    float: left;
    text-transform: uppercase;
    font-size: 14px;
}
.carrel-action:nth-child(2) {
    float: right;
}
.carrel-action:hover {
    text-decoration: underline;
}
#labels {
    width: 718px;
    height: 500px;
    position: absolute;
    left: 85px;
    top: 0px;
    z-index: -1;
}
#labels text {
    font-family: sans-serif;
    font-size: 12px;
}
#labels .b{
    font-weight: bold;
}
#nav {
    height: 500px;
    width: 30px;
    position: absolute;
    left: 80px;
    top: 0px;
}
#nav-context {
    height: 500px;
    width: 30px;
    position: absolute;
    left: 50px;
    top: 0px;
}
#graph-wrapper #graph-reset,
#graph-wrapper.child #nav-context text {
    display: none;
}
#graph-wrapper.child #graph-reset {
    display: inline-block;
    position: absolute;
    top: 0px;
    left: -10px;
}
.schema rect {
    stroke: white;
}
.schema.selected rect {
    stroke: black;
}
#graph {
    width: 80%;
}
#graph-subjects {
    height: 500px;
    width: 100%;
    position: absolute;
    z-index: 0;
    left: 130px;
    top: 5px;
}

#histogram {
    width: 80%;
    position: absolute;
    top: 530px;
    margin-bottom: 100px;
    padding: 0 40px 0 130px;
    box-sizing: border-box;
    height: 125px;
}
#histogram .reset,
#graph-reset {
    border: 1px solid #808080;
    color: #808080;
    cursor: pointer;
    padding: 2px 6px;
    text-transform: uppercase;
    font-size: 12px;
    display: inline-block;
    position: absolute;
}
#histogram .reset {
    left: 70px;
}
#histogram .reset:hover,
#graph-reset:hover {
    border-color: #000;
    color: #000;
}
#histogram .axis_labels {
    text-align: center;
    margin-top: 20px;
}
#slider-range {
    border: 1px solid #808080;
    height: 10px;
    box-sizing: border-box;
}
.ui-slider-range {
    background-color: rgba(0,0,0,.1);
}
.ui-slider-handle {
    background-color: black;
    left: 100%;
    line-height: 60px;
    text-align: center;
    text-indent: -8px;
    text-decoration: none;
    color: black;
    outline: none;
}
.ui-slider-horizontal .ui-slider-handle {
    width: 10px;
    height: 16px;
    top: -4px;
    font-size: 12px;
    line-height: 53px;
    margin-left: -5px;
    text-indent: -8px;
    cursor: pointer;
}
#histogram rect {
    stroke: #fff;
}
/* ... */

